# cookiecutter-scverse-instance

./: .cruft.json  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  developer_docs.md  index.md  template_usage.md
docs/notebooks/: example.ipynb
src/cookiecutter_scverse_instance/: __init__.py
src/cookiecutter_scverse_instance/pp/: basic.py
src/project_name/: __init__.py
tests/: test_basic.py
