[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "project_name"
version = "0.0.1"
authors = [
    {name = "Your Name"},
]
maintainers = [
    {name = "Your Name", email = "yourname@example.com"},
]
description = "A very interesting piece of code"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
urls.Documentation = "https://project-name.readthedocs.io/"
urls.Source = "https://github.com/your_github_username/project-name"
urls.Home-page = "https://github.com/your_github_username/project-name"
dependencies = ["anndata"]

[project.optional-dependencies]
dev = [
    # CLI for managing the python project
    "hatch",
]
doc = [
    "sphinx>=4",
    "furo",
    "myst-parser",
    "sphinxcontrib-bibtex>=1.0.0",
    "scanpydoc[typehints]>=0.7.4",
    # For notebooks
    "nbsphinx",
    "ipython>=8.3.0"
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["project_name"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "-Werror",  # if 3rd party libs raise DeprecationWarnings, just use filterwarnings below
    "--import-mode=importlib",  # allow using test files with same name
]
filterwarnings = [
    # "ignore:.*U.*mode is deprecated:DeprecationWarning",
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"
